== Changelog ==
= 1.7.2 =
* Fix: Some php notices and warnings fixed
= 1.7.1 =
* Feature: Extends the [products] shortcode to allow 'brands' attribute
* Feature: The brands column is sortable now
* Catalan translation (thanks to Lluisma)
* Enhancement: Easier select brands page link in breadcrumbs
* Enhancement: Configure the brand banner and the brand description position independently
* Dev: New filter 'pwb_taxonomy_rewrite' to change the rewrite slug
* Dev: New filter 'pwb_taxonomy_with_front' to change default "with_front" value
* Fix: Fatal error in PHP5.4
= 1.7.0 =
* Feature: A-Z Listing shortcode
* Feature: New brands exporter/importer introduced
* Fix: Missing some brands to filter
* Fix: Coupon doesn’t work for product variations (thanks @gekomees)
* Fix: The brand description is not shown if there are no products
* Enhancement: wpautop() for brand descriptions
* Enhancement: Other filter by brand widget enhancements
* Enhancement: Brands page link in breadcrumbs
* Enhancement: Enqueue the carousel lib conditionally
* Dev: New filter hook 'pwb_description_allowed_tags'
* Update: WC 3.5 compatibility
= 1.6.5 =
* Include icon and banner brand image in api response (thanks @qbig)
* Feature: New option for show only favorite brands in the dropdown widget and the list widget
* Feature: New option for configure the max number of brands in filter by brand widget
* Feature: Filter by brand without submit button
* Feature: New option for randomize brand logos in the list widget
* Feature: Hide empty brands in brand carousel
* Enhancement: Hide widgets when there are no results to show
* Fix: "Dokan Multivendor Marketplace" JavaScript conflict in admin
= 1.6.4 =
* Feature: Visual editor with shortcode support added to brand description
* Feature: Hide empty brands in brand widgets
* Feature: Place brand description before or after product loop
* Fix: WC import not assigning brands
* Minor fixes and tweaks
= 1.6.3 =